--- a/bin/templates/resultPage.html
+++ b/bin/templates/resultPage.html
@@ -3,10 +3,23 @@
 <head lang="pl">
 <meta charset="UTF-8">
 <title>Witaj w Tweeterze</title>
+<link href="/webjars/materializecss/0.97.7/css/materialize.css"
+	type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 <body>
-	<ul>
-		<li th:each="tweet : ${tweets}" th:text="${tweet}">Losowy tweet</li>
-	</ul>
+	<div class="row">
+		<h2 class="indigo-text center"
+			th:text="|Wyniki wyszukiwania ${search}|">Tweety</h2>
+		<ul class="collection">
+			<li class="collection-item avatar" th:each="tweet : ${tweets}">
+				<img th:src="${tweet.user.profileImageUrl}" alt="" class="circle" />
+				<span class="title" th:text="${tweet.user.name}">Użytkownik</span>
+				<p th:text="${tweet.text}">Treść tweeta</p>
+			</li>
+		</ul>
+	</div>
+	<script src="/webjars/jquery/3.1.1-1/jquery.js"></script>
+	<script src="/webjars/materializecss/0.97.7/css/materialize.css"></script>
+
 </body>
 </html>
