--- a/src/main/resources/templates/resultPage.html
+++ b/src/main/resources/templates/resultPage.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://ultraq.net.nz/thymeleaf/layout"
+	layout:decorator="layout/default">
 <head lang="pl">
-<meta charset="UTF-8">
-<title>Witaj w Tweeterze</title>
-<link href="/webjars/materializecss/0.97.7/css/materialize.css"
-	type="text/css" rel="stylesheet" media="screen,projection" />
+<title>Witaj w Twitterze</title>
 </head>
 <body>
-	<div class="row">
+	<div class="row" layout:fragment="content">
 		<h2 class="indigo-text center"
 			th:text="|Wyniki wyszukiwania ${search}|">Tweety</h2>
 		<ul class="collection">
 			<li class="collection-item avatar" th:each="tweet : ${tweets}">
 				<img th:src="${tweet.user.profileImageUrl}" alt="" class="circle" />
-				<span class="title" th:text="${tweet.user.name}">UÅ¼ytkownik</span>
-				<p th:text="${tweet.text}">TreÅ›Ä‡ tweeta</p>
+				<span class="title" th:text="${tweet.user.name}">U¿ytkownik</span>
+				<p th:text="${tweet.text}">Treœæ tweeta</p>
 			</li>
 		</ul>
 	</div>
