fixed thymeleaf layouts

--- a/bin/templates/resultPage.html
+++ b/bin/templates/resultPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://ultraq.net.nz/thymeleaf/layout"
-	layout:decorator="layout/default">
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{default}">
 <head lang="pl">
 <title>Witaj w Twitterze</title>
 </head>
@@ -17,8 +17,5 @@
 			</li>
 		</ul>
 	</div>
-	<script src="/webjars/jquery/3.1.1-1/jquery.js"></script>
-	<script src="/webjars/materializecss/0.97.7/css/materialize.css"></script>
-
 </body>
 </html>
