--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://ultraq.net.nz/thymeleaf/layout">
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset="UTF-8" /> 
 <meta name="viewport"
 	content="width=device-width, initialscale=1, maximum-scale=1.0, user-scalable=no" />
 <title>Domyślny tytuł</title>
@@ -10,7 +10,7 @@
 	type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 <body>
-	<section layout:fragmet="content">
+	<section layout:fragment="content">
 		<p>Zawartość strony</p>
 	</section>
 	<script src="/webjars/jquery/3.1.1-1/jquery.js"></script>
