--- a/src/main/resources/templates/searchPage.html
+++ b/src/main/resources/templates/searchPage.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{default}">
+<head lang="pl">
+<title>Wyszukaj</title>
 </head>
 <body>
-
+	<div class="row" layout:fragment="content">
+		<h4 class="indigo-text center">Wpisz wyszukiwane s³owo</h4>
+		<form action="/result" method="get" class="col s12">
+			<div class="row center">
+				<div class="input-field col s6 offset-s3">
+					<i class="mdi-action-search prefix"></i> <input id="search"
+						name="search" type="text" class="validate" /> <label for="search">Szukaj</label>
+				</div>
+			</div>
+		</form>
+	</div>
 </body>
 </html>
