--- a/src/main/resources/templates/searchPage.html
+++ b/src/main/resources/templates/searchPage.html
@@ -3,11 +3,12 @@
 	xmlns:layout="http://ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{default}">
 <head lang="pl">
+<meta charset="UTF-8" />
 <title>Wyszukaj</title>
 </head>
 <body>
 	<div class="row" layout:fragment="content">
-		<h4 class="indigo-text center">Wpisz wyszukiwane s≥owo</h4>
+		<h4 class="indigo-text center">Wpisz wyszukiwane s≈Çowo</h4>
 		<form action="/result" method="get" class="col s12">
 			<div class="row center">
 				<div class="input-field col s6 offset-s3">
