--- a/bin/templates/layout/default.html
+++ b/bin/templates/layout/default.html
@@ -7,13 +7,17 @@
 	content="width=device-width, initialscale=1.0, maximum-scale=1.0, user-scalable=no" />
 <link href="/webjars/materializecss/0.97.7/css/materialize.css"
 	type="text/css" rel="stylesheet" media="screen,projection" />
+<link href="/css/custom.css"
+	type="text/css" rel="stylesheet" media="screen,projection" />
+<link href="/webjars/material-design-icons/3.0.1/material-icons.css"
+	rel="stylesheet">
 <title>Domyślny tytuł</title>
 </head>
 <body>
 	<section layout:fragment="content">
 		<p>Zawartość strony</p>
 	</section>
-	<script src="/webjars/jquery/3.1.1-1/jquery.js"></script>
-	<script src="/webjars/materializecss/0.97.7/css/materialize.css"></script>
+	<script type="text/javascript" src="/webjars/jquery/3.1.1-1/jquery.js"></script>
+	<script type="text/javascript" src="/webjars/materializecss/0.97.7/css/materialize.css"></script>	
 </body>
 </html>
