--- a/src/main/resources/templates/resultPage.html
+++ b/src/main/resources/templates/resultPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{default}">
+	layout:decorate="~{layout/default}">
 <head lang="pl">
 <meta charset="UTF-8" />
 <title>Witaj w Twitterze</title>
