--- a/src/main/resources/templates/searchPage.html
+++ b/src/main/resources/templates/searchPage.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{default}">
+	layout:decorate="~{layout/default}">
 <head lang="pl">
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <title>Wyszukaj</title>
 </head>
 <body>
-	<div class="row" layout:fragment="content">
-		<h4 class="indigo-text center">Wpisz wyszukiwane słowo</h4>
-		<form action="/result" method="get" class="col s12">
-			<div class="row center">
-				<div class="input-field col s6 offset-s3">
-					<i class="mdi-action-search prefix"></i> <input id="search"
-						name="search" type="text" class="validate" /> <label for="search">Szukaj</label>
+	<div class="container" layout:fragment="content">
+		<div class="row">
+			<h4 class="indigo-text center">Wpisz wyszukiwane słowo</h4>
+			<div class="col s6 offset-s3">
+				<div id="errorMessage" class="card-panel red lighten-2"
+					th:if="${error}">
+					<span class="card-title" th:text="${error}"></span>
 				</div>
+				<form action="/postSearch" method="post">
+					<div class="row center">
+						<div class="input-field">
+							<i class="material-icons prefix">search</i>							
+							<input id="search" name="search" type=text class="validate" required />								  
+						</div>
+					</div>
+				</form>
 			</div>
-		</form>
+		</div>
 	</div>
 </body>
 </html>
