--- a/bin/templates/layout/default.html
+++ b/bin/templates/layout/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
+<head lang="pl">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <link href="/webjars/materializecss/0.97.7/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
