--- a/bin/templates/profile/profilePage.html
+++ b/bin/templates/profile/profilePage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/default}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{layout/default}">
 <head lang="pl">
 <meta charset="UTF-8">
 <title>Twój profil</title>
@@ -8,11 +9,28 @@
 	<div class="container" layout:fragment="content">
 		<div class="row">
 			<h2 class="indigo-text center-align" th:text="#{profile.title}">Informacje osobiste</h2>
+			<div class="col s12 center red-text" th:text="${error}" th:if="${error}">Błąd ładowania pliku</div>
+			<div class="col m8 s12 offset-m2">
+				<img th:src="@{/uploadedPicture}" width="100" height="100" />
+			</div>
+			<form th:action="@{/profile}" method="post" enctype="multipart/form-data" class="col m8 s12 offset-m2">
+				<div class="input-field col s6">
+					<input type="file" id="file" name="file" />
+				</div>
+				<div class="col s6 center">
+					<button class="btn indigo waves-effect waves-light" type="submit" name="upload">
+						<span th:text="#{upload}" th:remove="tag">Załaduj</span><i class="material-icons right">send</i>
+					</button>
+				</div>
+			</form>
+		</div>
+		<div class="row">
 			<form th:action="@{/profile}" th:object="${profileForm}" method="post" class="col m8 s12 offset-m2">
 				<div class="row">
 					<div class="input-field col s6">
-						<input th:field="${profileForm.twitterHandle}" id="twitterHandle" type="text" required="required" th:errorclass="invalid">
-						<label for="twitterHandle" th:text="#{twitter.handle}">Identyfikator Twitter</label>
+						<input th:field="${profileForm.twitterHandle}" id="twitterHandle" type="text" required="required"
+							th:errorclass="invalid"><label for="twitterHandle" th:text="#{twitter.handle}">Identyfikator
+							Twitter</label>
 						<div th:errors="*{twitterHandle}" class="red-text">Błąd</div>
 					</div>
 					<div class="input-field col s6">
@@ -23,8 +41,9 @@
 				</div>
 				<div class="row">
 					<div class="input-field col s6">
-						<input th:field="${profileForm.birthDate}" id="birthDate" type="text" required="required" th:placeholder="${dateFormat}" th:errorclass="invalid">
-						<label for="birthDate" class="active" th:text="#{birthdate}">Data urodzenia</label>
+						<input th:field="${profileForm.birthDate}" id="birthDate" type="text" required="required"
+							th:placeholder="${dateFormat}" th:errorclass="invalid"> <label for="birthDate" class="active"
+							th:text="#{birthdate}">Data urodzenia</label>
 						<div th:errors=*{birthDate} class="red-text">Błąd</div>
 					</div>
 				</div>
@@ -36,7 +55,8 @@
 					<div th:errors="*{tastes}" class="red-text">Błąd</div>
 					<div class="row" th:each="row,rowStat : *{tastes}">
 						<div class="col s6">
-							<input type="text" required="required" th:field="*{tastes[__${rowStat.index}__]}" th:placeholder="#{taste.placeholder}" />
+							<input type="text" required="required" th:field="*{tastes[__${rowStat.index}__]}"
+								th:placeholder="#{taste.placeholder}" />
 						</div>
 						<div class="col s6">
 							<button class="btn red waves-effect" type="submit" name="removeTaste" th:value="${rowStat.index}">
