--- a/bin/templates/profile/profilePage.html
+++ b/bin/templates/profile/profilePage.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layout/default}">
-<head lang="pl">
-<meta charset="UTF-8">
-<title>TwÃ³j profil</title>
+	layout:decorator="layout/default">
+<head>
+<title th:text="#{menu.profile}"></title>
 </head>
 <body>
-	<div class="container" layout:fragment="content">
+	<div layout:fragment="content">
 		<div class="row">
 			<h2 class="indigo-text center-align" th:text="#{profile.title}">Informacje osobiste</h2>
-			<div class="col s12 center red-text" th:text="${error}" th:if="${error}">BÅ‚Ä…d Å‚adowania pliku</div>
+			<div class="col s12 center red-text" th:text="${error}" th:if="${error}">B³¹d ³adowania pliku</div>
 			<div class="col m8 s12 offset-m2">
 				<img th:src="@{/uploadedPicture}" width="100" height="100" />
 			</div>
@@ -19,7 +18,7 @@
 				</div>
 				<div class="col s6 center">
 					<button class="btn indigo waves-effect waves-light" type="submit" name="upload">
-						<span th:text="#{upload}" th:remove="tag">ZaÅ‚aduj</span><i class="material-icons right">send</i>
+						<span th:text="#{upload}" th:remove="tag">Za³aduj</span><i class="material-icons right">send</i>
 					</button>
 				</div>
 			</form>
@@ -29,30 +28,29 @@
 				<div class="row">
 					<div class="input-field col s6">
 						<input th:field="${profileForm.twitterHandle}" id="twitterHandle" type="text" required="required"
-							th:errorclass="invalid"><label for="twitterHandle" th:text="#{twitter.handle}">Identyfikator
-							Twitter</label>
-						<div th:errors="*{twitterHandle}" class="red-text">BÅ‚Ä…d</div>
+							th:errorclass="invalid" /><label for="twitterHandle" th:text="#{twitter.handle}">Identyfikator Twitter</label>
+						<div th:errors="*{twitterHandle}" class="red-text">B³¹d</div>
 					</div>
 					<div class="input-field col s6">
-						<input th:field="${profileForm.email}" id="email" type="email" required="required" th:errorclass="invalid">
-						<label for="email" th:text="#{email}">Adres e-mail</label>
-						<div th:errors="*{email}" class="red-text">BÅ‚Ä…d</div>
+						<input th:field="${profileForm.email}" id="email" type="email" required="required" th:errorclass="invalid" /> <label
+							for="email" th:text="#{email}">Adres e-mail</label>
+						<div th:errors="*{email}" class="red-text">B³¹d</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="input-field col s6">
 						<input th:field="${profileForm.birthDate}" id="birthDate" type="text" required="required"
-							th:placeholder="${dateFormat}" th:errorclass="invalid"> <label for="birthDate" class="active"
+							th:placeholder="${dateFormat}" th:errorclass="invalid" /> <label for="birthDate" class="active"
 							th:text="#{birthdate}">Data urodzenia</label>
-						<div th:errors=*{birthDate} class="red-text">BÅ‚Ä…d</div>
+						<div th:errors="*{birthDate}" class="red-text">B³¹d</div>
 					</div>
 				</div>
 				<fieldset class="row">
 					<legend th:text="#{tastes.legend}">Co lubisz?</legend>
 					<button class="btn teal waves-effect" type="submit" name="addTaste">
-						<span th:text="#{add.taste}" th:remove="tag">Dodaj preferencjÄ™</span><i class="material-icons left">add</i>
+						<span th:text="#{add.taste}" th:remove="tag">Dodaj preferencjê</span><i class="material-icons left">add</i>
 					</button>
-					<div th:errors="*{tastes}" class="red-text">BÅ‚Ä…d</div>
+					<div th:errors="*{tastes}" class="red-text">B³¹d</div>
 					<div class="row" th:each="row,rowStat : *{tastes}">
 						<div class="col s6">
 							<input type="text" required="required" th:field="*{tastes[__${rowStat.index}__]}"
@@ -60,14 +58,14 @@
 						</div>
 						<div class="col s6">
 							<button class="btn red waves-effect" type="submit" name="removeTaste" th:value="${rowStat.index}">
-								<span th:text="#{remove}" th:remove="tag">UsuÅ„</span><i class="material-icons right">delete</i>
+								<span th:text="#{remove}" th:remove="tag">Usuñ</span><i class="material-icons right">delete</i>
 							</button>
 						</div>
 					</div>
 				</fieldset>
 				<div class="row">
 					<button class="btn waves-effect waves-light" type="submit" name="save">
-						<span th:text="#{submit}" th:remove="tag">WyÅ›lij</span><i class="material-icons right">send</i>
+						<span th:text="#{submit}" th:remove="tag">Wyœlij</span><i class="material-icons right">send</i>
 					</button>
 				</div>
 			</form>
