--- a/src/main/resources/templates/resultPage.html
+++ b/src/main/resources/templates/resultPage.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layout/default}">
-<head lang="pl">
-<meta charset="UTF-8" />
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorator="layout/default">
+<head>
 <title>Witaj w Twitterze</title>
 </head>
 <body>
 	<div class="row" layout:fragment="content">
-		<h2 class="indigo-text center"
-			th:text="|Wyniki wyszukiwania ${search}|">Tweety</h2>
+		<h2 class="indigo-text center" th:text="|Wyniki wyszukiwania ${search}|">Tweety</h2>
 		<ul class="collection">
-			<li class="collection-item avatar" th:each="tweet : ${tweets}">
-				<img th:src="${tweet.profileImageUrl}" alt="" class="circle" />
-				<span class="title" th:text="${tweet.name}">UÅ¼ytkownik</span>
-				<p th:text="${tweet.text}">TreÅ›Ä‡ tweeta</p>
-			</li>
+			<li class="collection-item avatar" th:each="tweet : ${tweets}"><img th:src="${tweet.profileImageUrl}" alt=""
+				class="circle" /> <span class="title" th:text="${tweet.name}">U¿ytkownik</span>
+				<p th:text="${tweet.text}">Treœæ tweeta</p></li>
 		</ul>
 	</div>
 </body>
